@@ -51,6 +51,7 @@ Changes for v2.00
 - Change bar color of Progress Bars to aquamarine, for greater contrast with blue text (Graham)
 - Avoid null pointer exception in Code Selector when a device type has no built-in setup codes (Graham)
 - Scroll notes of General Panel to top upon opening (Graham)
+- If new device upgrade is not assigned to a device button, open dialog giving user an opportunity to do so (Graham)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
